+ libi2c-dev is now a dependency! (Ok, I don't like it either, but we don't always have a choice, do we?) + Some cleanup.

--- a/build
+++ b/build
@@ -53,8 +53,10 @@ fi
       target=i2c
       echo "Building wiringOli with the I2C helper libraries."
     else
-      target=all
-      echo "The wiringOli I2C helper libraries will not be built."
+      #target=all
+      #echo "The wiringOli I2C helper libraries will not be built."
+      echo "Dependency failure: Install libi2c-dev package first"
+      exit
     fi
   fi
 
